# tasca

./: .env.example  .gitignore  .pre-commit-config.yaml  INVAR.md  LICENSE  README.md  README_CN.md  plan.yaml  pyproject.toml
.agents/: instructions.md  mcp.json
.agents/commands/: audit.md
.agents/skills/develop/: SKILL.md
.agents/skills/investigate/: SKILL.md
.agents/skills/propose/: SKILL.md
.github/workflows/: publish.yml
docs/: adr-001-mermaid-rendering.md  adr-002-mermaid-svg-sanitization.md  deployment-ops-v0.1.md  e2e-testing.md  frontend-stack-and-integration-v0.1.md  implementation-readiness-checklist.md  repo-structure-v0.1.md  spec-conformance-note-v0.1.md  tasca-data-schema-v0.1.md  tasca-design-notes.md  tasca-http-api-v0.1.md  tasca-interaction-design-v0.2.md  tasca-mcp-interface-v0.1.md  tasca-search-export-v0.1.md  tasca-technical-design-v0.1.md  tasca-web-uiux-v0.1.md  terminology-mapping-v0.1.md  whiteboard-data-schema-v0.1.md  whiteboard-design-notes.md  whiteboard-http-api-v0.1.md  whiteboard-mcp-interface-v0.1.md  whiteboard-search-export-v0.1.md  whiteboard-web-uiux-v0.1.md
evidence/guard_followup2_correctness/freeze-gate-retest/: 00_env.txt  01_commands.txt  10_uv_invar_guard_changed_limits_service.txt  11_uv_pytest_unit_limits_service.txt  12_uv_pytest_mcp_list_tools_invalid_request.txt  13_uv_python_issue_l3_mcp_smoke.txt  20_git_status_precommit.txt
scripts/: invar  run-e2e-external-server.sh
src/: sitecustomize.py  tasca_invar_entrypoint.py  usercustomize.py
src/tasca/: __init__.py  cli.py  config.py  main.py
src/tasca/core/: __init__.py  _word_lists.py  contracts.py  database_normalization.py  export_service.py  human_readable_ids.py  mcp_jsonrpc.py  mcp_response.py  schema.py  svg_sanitizer.py  svg_sanitizer_internal.py  table_state_machine.py
src/tasca/core/domain/: __init__.py  patron.py  saying.py  seat.py  table.py
src/tasca/core/services/: __init__.py  batch_delete_service.py  dedup_cleanup_service.py  dedup_service.py  limits_service.py  mention_service.py  saying_service.py  seat_service.py  table_service.py
src/tasca/shell/: __init__.py  guard_contract.py  invar_entrypoint.py  invar_runtime_policy.py  logging.py  skills_cli.py
src/tasca/shell/api/: __init__.py  app.py  auth.py  deps.py  fastapi_compat.py
src/tasca/shell/api/routes/: __init__.py  export.py  health.py  patrons.py  sayings.py  search.py  seats.py  tables.py  tables_control.py
src/tasca/shell/mcp/: __init__.py  database.py  entrypoint_logic.py  entrypoint_session_tools.py  entrypoints.py  proxy.py  responses.py  server.py
src/tasca/shell/services/: limited_saying_service.py  table_id_generator.py
src/tasca/shell/storage/: __init__.py  control_repo.py  database.py  dedup_repo.py  idempotency_repo.py  patron_repo.py  saying_repo.py  search_repo.py  seat_repo.py  table_repo.py
src/tasca/skills/tasca-moderation/: SKILL.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  harness.py  test_api.py  test_cli.py  test_mcp.py  test_mcp_proxy.py  test_server_cleanup.py
tests/repro/: conftest.py  issue_l3_error_paths.py  issue_l3_mcp_smoke.py
tests/unit/: __init__.py  test_batch_delete_service.py  test_cli.py  test_cli_export.py  test_dedup.py  test_dedup_cleanup.py  test_guard_contract.py  test_human_readable_ids.py  test_invar_entrypoint.py  test_invar_runtime_policy.py  test_limits_service.py  test_logging_observability.py  test_mention.py  test_saying.py  test_seat_ttl.py  test_skills_cli.py  test_svg_sanitizer.py  test_table.py  test_table_version.py  test_tasca_invar_entrypoint.py  test_usercustomize.py
tests/unit/api/: test_csp_middleware.py  test_export_routes.py  test_patrons_routes.py  test_sayings_routes.py  test_search_routes.py  test_seats_routes.py  test_tables_routes.py
tests/unit/mcp/: test_mcp_server.py  test_proxy.py  test_proxy_middleware.py
tests/unit/services/: __init__.py  test_table_id_generator.py
tests/unit/storage/: test_batch_delete_repo.py  test_control_repo.py  test_search_repo.py  test_table_repo.py
web/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx
web/src/api/: AuthConnector.tsx  client.ts  patrons.ts  sayings.ts  tables.ts
web/src/auth/: AuthContext.tsx
web/src/components/: Board.tsx  CommandConsole.test.tsx  CommandConsole.tsx  ConfirmDialog.tsx  CopyButton.tsx  MentionInput.tsx  MetaList.tsx  ModeIndicator.css  ModeIndicator.tsx  RequestSummaryButton.tsx  SeatDeck.tsx  Stream.test.tsx  Stream.tsx  TableControls.test.tsx  TableControls.tsx  index.ts
web/src/constants/: presence.ts
web/src/hooks/: useKeyboardNav.test.ts  useKeyboardNav.ts  useLongPoll.ts  useManageMode.ts  useNow.ts
web/src/rendering/: markdown.security.test.tsx  markdown.tsx  math.security.test.tsx  math.tsx  mermaid.security.test.ts  mermaid.tsx  svg-sanitizer.security.test.ts  svg-sanitizer.ts
web/src/routes/: Table.tsx  Taproom.tsx  Watchtower.tsx
web/src/security/: svg_sanitize.ts
web/src/styles/: dialog.css  index.css  table.css  taproom.css  watchtower.css
web/src/styles/table/: console.css  controls.css  hud.css  responsive.css  seat-deck.css  shared.css  stream.css  tokens.css
web/src/test/: setup.ts
