[project]
name = "tasca"
version = "0.1.25"
description = "Tasca - A discussion table service for coding agents"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Tasca Team" }
]
keywords = ["mcp", "agents", "collaboration", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "wsproto>=1.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "returns>=0.23.0",
    "deal>=4.24.0",
    "fastmcp>=0.1.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
# Backward compatibility - kept for tools requiring extras
# Use [dependency-groups] for uv --dev workflow

[dependency-groups]
dev = [
    "invar-tools",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-dateutil>=2.9.0",
]

[project.scripts]
tasca = "tasca.main:main"
tasca-mcp = "tasca.shell.mcp.server:run_mcp_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tasca"]
artifacts = ["src/tasca/web/dist/**"]
include = ["src/tasca/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
timeout = 30
timeout_method = "thread"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["web/", "tests/"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["web/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["tasca"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Invar configuration
[tool.invar.guard]
core_paths = ["src/tasca/core"]
shell_paths = ["src/tasca/shell"]
exclude_paths = ["web/", "tests", "data/", ".vectl/worktrees", ".invar/examples"]
max_file_lines = 500
max_function_lines = 50
require_contracts = true
require_doctests = true
forbidden_imports = ["os", "sys", "socket", "requests", "urllib", "subprocess", "shutil", "io", "pathlib"]
timeout_doctest = 60
timeout_crosshair = 300
timeout_hypothesis = 300
